tests/baselines/reference/parserErrorRecoveryIfStatement1.errors.txt
==== tests/cases/compiler/parserErrorRecoveryIfStatement1.ts (1 errors) ====
    class Foo {
      f1() {
        if (
      }
      ~
!!! parserErrorRecoveryIfStatement1.ts(4,3): error TS1109: Expression expected.
      f2() {
      }
      f3() {
      }
    }